--- a/css/controlElements.css
+++ b/css/controlElements.css
@@ -103,10 +103,9 @@ Example: <a href="#" class="copy-button">
 */
 .tab-result .show-title {
   position: absolute;
-  right: 84px;
+  left: 11px;
   display: inline-block;
   margin-top: 58px;
-  width: 24px;
   height: 24px;
   line-height: 24px;
   text-decoration: none;
