--- a/css/UIComponents.css
+++ b/css/UIComponents.css
@@ -115,7 +115,7 @@
     padding: 5px 0;
     margin-bottom: 5px; }
   #manual-seq-input .input-controls {
-    margin: 10px 0 10px 5px;
+    margin: 10px 5px 5px 5px;
     overflow: hidden; }
     #manual-seq-input .input-controls .right {
       float: right; }
