--- a/css/navigationTopBar.scss
+++ b/css/navigationTopBar.scss
@@ -105,6 +105,7 @@ ul {
       background: $topNav-primaryMenuBackground;
       color: $topNav-secondaryMenuText;
       font-size: 15px;
+      font-family: $defaultFontFamily;
     }
   }
 
