--- a/css/pSlider.css
+++ b/css/pSlider.css
@@ -1,5 +1,5 @@
 .sliderBox {
-  font-family: "Gotham Rounded SSm A", "Gotham Rounded SSm B", Times, Serif;
+  font-family: Serif, Sans, "Gotham Rounded SSm B";
   padding: 10px;
   margin-bottom: 20px; }
   .sliderBox #log-slider {
