--- a/css/utilities/variables.scss
+++ b/css/utilities/variables.scss
@@ -3,7 +3,7 @@ $secondaryColor: #ededf2;
 $accentColor: #a3a3a3;
 $boxBackground: white;
 $textColor: black; //#797979;
-$defaultFontFamily: "Gotham Rounded SSm A", "Gotham Rounded SSm B", Times, Serif;
+$defaultFontFamily: Serif, Sans, "Gotham Rounded SSm B";
 
 //nav-bar
 $topNav-navLineHeight: 40px;
