--- a/css/utilities/variables.scss
+++ b/css/utilities/variables.scss
@@ -3,6 +3,8 @@ $secondaryColor: #ededf2;
 $accentColor: #a3a3a3;
 $boxBackground: white;
 $textColor: black; //#797979;
+
+$defaultFontSize: 16px;
 $defaultFontFamily: Serif, Sans, "Gotham Rounded SSm B";
 
 //nav-bar
