- css:default font changed to - Sans serif - .input-controls: changed padding - default demo is disabled now
Signed-off-by: Eugene Rumynskiy <erumynskiy@gmail.com>

--- a/css/UIComponents.scss
+++ b/css/UIComponents.scss
@@ -232,6 +232,7 @@
       border-radius: 5px;
       border: solid $borderColor $thin;
       display: inline-block;
+      padding: 5px 10px;
 
       span {
         display: inline-block;
