--- a/css/utilities/variables.scss
+++ b/css/utilities/variables.scss
@@ -5,7 +5,7 @@ $boxBackground: white;
 $textColor: black; //#797979;
 
 $defaultFontSize: 16px;
-$defaultFontFamily: Serif, Sans, "Gotham Rounded SSm B";
+$defaultFontFamily: Sans serif;
 
 //nav-bar
 $topNav-navLineHeight: 40px;
