--- a/css/UIComponents.css
+++ b/css/UIComponents.css
@@ -25,10 +25,10 @@
     font-style: italic; }
 
 .nav-area {
-  font-family: Serif, Sans, "Gotham Rounded SSm B"; }
+  font-family: Sans serif; }
 
 .suggestions {
-  font-family: Serif, Sans, "Gotham Rounded SSm B";
+  font-family: Sans serif;
   margin-top: 42px;
   background-color: #dadada;
   border-radius: 10px;
@@ -91,7 +91,7 @@
       padding: 5px; }
 
 #motif-list-selected-cmp {
-  font-family: Serif, Sans, "Gotham Rounded SSm B";
+  font-family: Sans serif;
   min-height: 75px; }
   #motif-list-selected-cmp #motif-list-selected {
     display: inline-block;
@@ -126,7 +126,7 @@
     display: none; }
 
 #manual-seq-input {
-  font-family: Serif, Sans, "Gotham Rounded SSm B";
+  font-family: Sans serif;
   background-color: white;
   border: 1.5px solid grey;
   border-radius: 5px;
@@ -153,7 +153,8 @@
       background-color: #ededf2;
       border-radius: 5px;
       border: solid grey 1px;
-      display: inline-block; }
+      display: inline-block;
+      padding: 5px 10px; }
       #manual-seq-input .input-controls .interface-button span {
         display: inline-block;
         min-width: 120px; }
@@ -176,7 +177,7 @@
         color: #a3a3a3; }
 
 #sequence-input-cmp {
-  font-family: Serif, Sans, "Gotham Rounded SSm B";
+  font-family: Sans serif;
   background-color: #ededf2; }
   #sequence-input-cmp .controls {
     border-radius: 2px;
@@ -208,7 +209,7 @@
         border-left: 1px solid grey; }
 
 #result-cmp {
-  font-family: Serif, Sans, "Gotham Rounded SSm B";
+  font-family: Sans serif;
   position: relative; }
   #result-cmp #result-tabs {
     min-width: 180px;
@@ -301,7 +302,7 @@
     display: none; }
 
 #motif-table-cmp {
-  font-family: Serif, Sans, "Gotham Rounded SSm B";
+  font-family: Sans serif;
   word-break: break-all; }
 
 /* Media for larger devices */
