--- a/css/pSlider.css
+++ b/css/pSlider.css
@@ -1,5 +1,5 @@
 .sliderBox {
-  font-family: Serif, Sans, "Gotham Rounded SSm B";
+  font-family: Sans serif;
   padding: 10px;
   margin-bottom: 20px; }
   .sliderBox #log-slider {
