-resultTabs: title button html is now toggled
Signed-off-by: Eugene Rumynskiy <erumynskiy@gmail.com>

--- a/css/controlElements.css
+++ b/css/controlElements.css
@@ -110,7 +110,7 @@ Example: <a href="#" class="copy-button">
   line-height: 24px;
   text-decoration: none;
   color: rgba(0, 0, 0, 0.54); }
-.tab-result .title-shown {
+.tab-result .show-title:hover {
   color: black; }
 
 /*# sourceMappingURL=controlElements.css.map */
