--- a/css/controlElements.scss
+++ b/css/controlElements.scss
@@ -140,7 +140,7 @@ Example: <a href="#" class="copy-button">
     color: $icon-inactive;
   }
 
-  .title-shown {
+  .show-title:hover {
     color:$icon-hover-color;
   }
 }
