-search-input: changed padding -ModeButton: changed icon
Signed-off-by: Eugene Rumynskiy <erumynskiy@gmail.com>

--- a/css/navigationTopBar.scss
+++ b/css/navigationTopBar.scss
@@ -94,7 +94,8 @@ ul {
       position: absolute;
       display: inline-block;
       width: 320px;
-      padding-left: 5px;
+      padding: 0px 0px 4px 5px;
+
 
       border: 0 solid;
       border-bottom: 1px solid black;
