--- a/css/navigationTopBar.css
+++ b/css/navigationTopBar.css
@@ -72,7 +72,7 @@ ul {
       position: absolute;
       display: inline-block;
       width: 320px;
-      padding-left: 5px;
+      padding: 0px 0px 4px 5px;
       border: 0 solid;
       border-bottom: 1px solid black;
       -webkit-border-radius: 5px;
