--- a/css/UIComponents.css
+++ b/css/UIComponents.css
@@ -17,10 +17,12 @@
     font-size: 24px;
     line-height: 36px; }
   #help-cmp .help-content {
-    text-indent: 32px;
+    margin: 16px;
     text-align: justify;
     font-size: 16px;
     line-height: 24px; }
+    #help-cmp .help-content ol {
+      margin: 8px; }
   #help-cmp .italic {
     font-style: italic; }
 
