--- a/externalLibs/jQuery/jquery-ui.css
+++ b/externalLibs/jQuery/jquery-ui.css
@@ -883,7 +883,7 @@ body .ui-tooltip {
 /* Component containers
 ----------------------------------*/
 .ui-widget {
-	font-family: Verdana,Arial,sans-serif;
+	font-family: Sans serif, Verdana, Arial, sans-serif;
 	font-size: 1.1em;
 }
 .ui-widget .ui-widget {
@@ -893,11 +893,11 @@ body .ui-tooltip {
 .ui-widget select,
 .ui-widget textarea,
 .ui-widget button {
-	font-family: Verdana,Arial,sans-serif;
+	font-family: Sans serif, Verdana, Arial, sans-serif;
 	font-size: 1em;
 }
 .ui-widget.ui-widget-content {
-	border: 1px solid #d3d3d3;
+	border: 1px solid grey;
 }
 .ui-widget-content {
 	border: 1px solid #aaaaaa;
@@ -908,7 +908,7 @@ body .ui-tooltip {
 	color: #222222;
 }
 .ui-widget-header {
-	border: 1px solid #aaaaaa;
+	border: 1px solid grey;
 	background: #cccccc url("images/ui-bg_highlight-soft_75_cccccc_1x100.png") 50% 50% repeat-x;
 	color: #222222;
 	font-weight: bold;
