--- a/css/UIComponents.css
+++ b/css/UIComponents.css
@@ -30,12 +30,13 @@
   font-family: Sans serif; }
 
 .suggestions {
+  position: relative;
   font-family: Sans serif;
   margin-top: 42px;
   background-color: #dadada;
   border-radius: 10px;
   border: 1px solid grey;
-  min-width: 600px; }
+  min-width: 630px; }
   .suggestions #legend-container {
     border-top: none;
     border-bottom: 1px solid grey;
@@ -46,14 +47,13 @@
       margin: 0 4px 0 4px;
       padding: 0 4px 0 4px; }
   .suggestions .suggestion {
-    min-height: 46px;
+    min-height: 60px;
     border-top: 1px solid grey;
     border-radius: 0;
     padding: 2px;
     margin: 2px; }
     .suggestions .suggestion .feature {
       display: inline;
-      vertical-align: middle;
       padding: 4px;
       margin: 4px; }
     .suggestions .suggestion .second {
@@ -65,7 +65,7 @@
       left: 500px;
       max-width: 240px; }
   .suggestions #motif-list {
-    max-height: 240px;
+    max-height: 310px;
     position: relative; }
     .suggestions #motif-list .motif-container .motif-title {
       display: inline-block;
