--- a/css/pSlider.css
+++ b/css/pSlider.css
@@ -1,5 +1,5 @@
 .sliderBox {
-  font-family: Sans serif;
+  font-family: sans-serif;
   padding: 10px;
   margin-bottom: 20px; }
   .sliderBox #log-slider {
