--- a/css/utilities/variables.scss
+++ b/css/utilities/variables.scss
@@ -5,7 +5,7 @@ $boxBackground: white;
 $textColor: black; //#797979;
 
 $defaultFontSize: 16px;
-$defaultFontFamily: Sans serif; //check this in jquery-ui.css
+$defaultFontFamily: sans-serif; //check this in jquery-ui.css
 
 //nav-bar
 $topNav-navLineHeight: 40px;
