-input buttons: added vertical align
Signed-off-by: Eugene Rumynskiy <erumynskiy@gmail.com>

--- a/css/UIComponents.scss
+++ b/css/UIComponents.scss
@@ -244,6 +244,7 @@
       span {
         display: inline-block;
         min-width: 120px;
+        vertical-align: middle;
 
         .material-icons {
           float:right;
