--- a/css/UIComponents.css
+++ b/css/UIComponents.css
@@ -159,7 +159,8 @@
       padding: 5px 10px; }
       #manual-seq-input .input-controls .interface-button span {
         display: inline-block;
-        min-width: 120px; }
+        min-width: 120px;
+        vertical-align: middle; }
         #manual-seq-input .input-controls .interface-button span .material-icons {
           float: right; }
       #manual-seq-input .input-controls .interface-button label {
