-refactoring changes -added inputState machine -collections could be switched now
Signed-off-by: Eugene Rumynskiy <erumynskiy@gmail.com>

--- a/css/UIComponents.scss
+++ b/css/UIComponents.scss
@@ -55,7 +55,7 @@
   border-radius: 10px;
   border: $thin solid $borderColor;
 
-  min-width: 630px;
+  min-width: 430px;
 
   .option {
     margin: 0 5px 0 5px;
@@ -188,8 +188,9 @@
       }
     }
 
-    .collection-values {
+    .option-values {
       display: inline-block;
+      vertical-align: -1.8px;
 
       div {
         display: inline-block;
