--- a/css/UIComponents.css
+++ b/css/UIComponents.css
@@ -36,7 +36,7 @@
   background-color: #dadada;
   border-radius: 10px;
   border: 1px solid grey;
-  min-width: 630px; }
+  min-width: 430px; }
   .collection-dialog .option {
     margin: 0 5px 0 5px;
     padding: 10px 0 10px 0; }
@@ -118,9 +118,10 @@
           display: block;
           top: 0px;
           padding: 5px; }
-    .suggestions .support-info .collection-values {
-      display: inline-block; }
-      .suggestions .support-info .collection-values div {
+    .suggestions .support-info .option-values {
+      display: inline-block;
+      vertical-align: -1.8px; }
+      .suggestions .support-info .option-values div {
         display: inline-block; }
 
 #motif-list-selected-cmp {
