--- a/css/UIComponents.css
+++ b/css/UIComponents.css
@@ -1,4 +1,5 @@
 #help-cmp {
+  font-family: sans-serif;
   margin-top: 120px;
   margin-left: 20%;
   margin-right: 20%;
@@ -10,6 +11,9 @@
   letter-spacing: 0.75px;
   overflow-x: hidden; }
   #help-cmp .help-header {
+    font-weight: bold;
+    padding-top: 20px;
+    padding-bottom: 6px;
     margin: 0 auto;
     max-width: 400px;
     text-transform: capitalize;
@@ -20,18 +24,26 @@
     margin: 16px;
     text-align: justify;
     font-size: 16px;
-    line-height: 24px; }
+    line-height: 40px; }
     #help-cmp .help-content .emblem {
       height: 150px;
       width: 150px;
       float: left;
       margin: 0 8px 16px 16px; }
+  #help-cmp .img-example {
+    vertical-align: middle; }
+  #help-cmp .img-wide {
+    display: block;
+    margin: 16px auto;
+    width: 100%; }
   #help-cmp .italic {
     font-style: italic; }
   #help-cmp .bold {
     font-weight: bold; }
   #help-cmp .underline {
     text-decoration: underline; }
+  #help-cmp .small-font {
+    font-size: 16px; }
 
 .nav-area {
   font-family: sans-serif; }
