--- a/externalLibs/jQuery/jquery-ui.css
+++ b/externalLibs/jQuery/jquery-ui.css
@@ -5,6 +5,18 @@
 * Copyright jQuery Foundation and other contributors; Licensed MIT */
 
 /* Layout helpers
+
+Substitution:
+
+.ui-dialog .ui-dialog-buttonpane .ui-dialog-buttonset {
+	float: right;
+}
+
+to
+
+.ui-dialog .ui-dialog-buttonpane .ui-dialog-buttonset {
+	text-align: center;
+}
 ----------------------------------*/
 .ui-helper-hidden {
 	display: none;
@@ -530,7 +542,8 @@ button.ui-button::-moz-focus-inner {
 	padding: .3em 1em .5em .4em;
 }
 .ui-dialog .ui-dialog-buttonpane .ui-dialog-buttonset {
-	float: right;
+	/*float: right;*/
+	text-align: center;
 }
 .ui-dialog .ui-dialog-buttonpane button {
 	margin: .5em .4em .5em 0;
