-added tooltips plugin(q2tip) -errors now parsed with tooltips -fixed sequence parsing -pSlider is reversed now
Signed-off-by: Eugene Rumynskiy <erumynskiy@gmail.com>

--- a/css/primaryComponentsSettings.scss
+++ b/css/primaryComponentsSettings.scss
@@ -55,7 +55,7 @@ td a:visited,
   cursor: pointer;
   font-size: 14px;
   white-space: nowrap;
-  overflow: hidden;
+  //overflow: hidden;
   text-decoration: none;
   text-align: center;
 }
