--- a/css/UIComponents.css
+++ b/css/UIComponents.css
@@ -196,7 +196,7 @@
     padding: 5px 0;
     margin-bottom: 5px; }
   #manual-seq-input .input-controls {
-    margin: 10px 5px 5px 5px;
+    margin: 10px 5px 3px 5px;
     overflow: hidden; }
     #manual-seq-input .input-controls .left {
       display: inline-block; }
@@ -207,7 +207,8 @@
       border-radius: 5px;
       border: solid grey 1px;
       display: inline-block;
-      padding: 5px 10px; }
+      padding: 5px 10px;
+      margin-bottom: 5px; }
       #manual-seq-input .input-controls .interface-button span {
         display: inline-block;
         min-width: 120px;
