--- a/css/UIComponents.scss
+++ b/css/UIComponents.scss
@@ -307,7 +307,7 @@
   }
 
   .input-controls {
-    margin: 10px 5px 5px 5px;
+    margin: 10px 5px 3px 5px;
     overflow: hidden;
 
     .left {
@@ -323,6 +323,7 @@
       border: solid $borderColor $thin;
       display: inline-block;
       padding: 5px 10px;
+      margin-bottom: 5px;
 
       span {
         display: inline-block;
