--- a/css/UIComponents.css
+++ b/css/UIComponents.css
@@ -78,6 +78,7 @@
   background-color: #dadada;
   border-radius: 10px;
   border: 1px solid grey;
+  box-shadow: 5px 5px 10px grey;
   min-width: 630px; }
   .suggestions #legend-container {
     border-top: none;
