--- a/css/UIComponents.scss
+++ b/css/UIComponents.scss
@@ -122,6 +122,7 @@
   background-color: $topNav-primaryMenuBackground;
   border-radius: 10px;
   border: $thin solid $borderColor;
+  box-shadow: 5px 5px 10px grey;
 
   min-width: 630px;
 
