-spectrum.css: added linebreak after 5th group -colorPicker: colors resorted according type
Signed-off-by: Eugene Rumynskiy <erumynskiy@gmail.com>

--- a/externalLibs/mySpectrum/spectrum.css
+++ b/externalLibs/mySpectrum/spectrum.css
@@ -5,6 +5,13 @@ Author: Brian Grinstead
 License: MIT
 ***/
 
+
+/*added by Erumynskiy*/
+.sp-palette-row-5 {
+    margin-bottom: 10px;
+}
+/*added by Erumynskiy*/
+
 .sp-container {
     position:absolute;
     top:0;
