--- a/css/primaryComponentsSettings.scss
+++ b/css/primaryComponentsSettings.scss
@@ -40,7 +40,7 @@ td a:visited,
 }
 .interface-component {
   padding: 5px 5px 5px 5px;
-  margin-bottom: 10px;
+  margin-bottom: 5px; //shrinking
 }
 
 
