-css inteface changes. marked as //shrinking -qtip2 changed style to dark
Signed-off-by: Eugene Rumynskiy <erumynskiy@gmail.com>

--- a/externalLibs/mySpectrum/spectrum.css
+++ b/externalLibs/mySpectrum/spectrum.css
@@ -7,7 +7,7 @@ License: MIT
 
 
 /*added by Erumynskiy*/
-.sp-palette-row-5 {
+.sp-palette-row-2, .sp-palette-row-5{
     margin-bottom: 10px;
 }
 /*added by Erumynskiy*/
