--- a/css/UIComponents.css
+++ b/css/UIComponents.css
@@ -189,7 +189,7 @@
   border-radius: 5px;
   margin: 5px;
   margin-bottom: 0;
-  padding-bottom: 0; }
+  padding: 0 5px; }
   #manual-seq-input textarea {
     border: solid 1.5px white;
     border-bottom: solid 1.5px grey;
