--- a/css/UIComponents.scss
+++ b/css/UIComponents.scss
@@ -294,7 +294,7 @@
   border-radius: 5px;
   margin: 5px;
   margin-bottom: 0;
-  padding-bottom: 0;
+  padding: 0 5px;
 
   textarea {
     border: solid $thick $boxBackground;
